--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Awesome</h1>
+  <h1>Comments</h1>
+  {{ range .}}
+  <div>{{ . }}</div>
+  {{ end }}
 </body>
 </html>
