--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Comments</title>
+  <link rel="stylesheet" href="/static/index.css">
 </head>
 <body>
   <h1>Comments</h1>
+  <form method="POST">
+    <textarea name="comment"></textarea>
+    <div>
+      <button type="submit">Post Comment</button>
+    </div>
+  </form>
   {{ range .}}
   <div>{{ . }}</div>
   {{ end }}
