--- a/templates/register.html
+++ b/templates/register.html
@@ -4,23 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Login</title> 
+  <title>Register</title> 
 </head>
 <body>
-  {{ if . }}
-    <div class="error">
-      {{ . }}
-    </div>
-  {{ end }}
   <form method="POST">
     <div>
       Username: <input type="text" name="username">
     </div>
     <div>
-      Password: <input type="password" name="password">
+      PAssword: <input type="password" name="password">
     </div>
     <div>
-      <button type="submit">Login</button>
+      <button type="submit">Register</button>
     </div>
   </form>
 </body>
